Fixing header font size responsiveness on mobile

--- a/css/all.scss
+++ b/css/all.scss
@@ -9,9 +9,7 @@ body {
   max-width: 100vw;
   min-width: 100vw;
   margin: 0;
-  @media only screen and (max-width: 1024px){
-    //max-width: 100%;
-  }
+
   > * {
     max-width: 100vw;
   }
@@ -21,7 +19,6 @@ header {
   margin: 2% 0 5%;
   width: 100%;
   text-align: center;
-
   h1.__title {
     font-size: 60px;
     margin: 0 0 0 -4ch;
@@ -56,4 +53,12 @@ footer {
 
 .app {
   opacity: 1;
+}
+
+@media only screen and (max-width: 1024px){
+  header {
+    h1.__title {
+      font-size: 48px;
+    }
+  }
 }
